# schemas-api

./: .dockerignore  .gitignore  Dockerfile  demo.py  main.py  program.py  pyproject.toml
data/: core.py
devops/: Jenkinsfile  namespace.yml  service.yml  statefulset.yml
routers/: schemas.py
